# iitp-oaip-153504-Padvalnikau

./: .gitignore  README.md
OAiP_Lab1/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
OAiP_Lab2/: CMakeLists.txt  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task15.cpp  task16.cpp  task17.cpp  task2.cpp  task3.1.cpp  task3.2.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
OAiP_Lab3/: task1.cpp  task2.cpp  task3.cpp  task4.1.cpp  task4.2.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
OAiP_Lab4/: task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task15.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
OAiP_Lab5/: additional_task1.cpp  additional_task2.cpp  additional_task3.cpp  static_lib.cpp  static_lib.h  task1.cpp  task2.cpp  task3.1.cpp  task3.2.cpp  task3.3.cpp
OAiP_Lab6/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
OAiP_Lab7/: task1.1.cpp  task1.2.cpp  task10.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
OAiP_Lab8/: task1.cpp  task2.cpp  task3.cpp
QT/Lab_1/task2/: circle.cpp  circle.h  figure.cpp  figure.h  graphicspainter.cpp  graphicspainter.h  hexagon.cpp  hexagon.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintscene.cpp  paintscene.h  rectangle.h  (+13 more)
QT/Lab_6/: task1.rar
UnitTest/: test1_Lab5.cpp  test1_Lab6.cpp  test2_Lab5.cpp  test3_Lab5.cpp  test_Lab7.cpp
(+849 files in other folders)
