cmake_minimum_required(VERSION 3.20)
project(OAiP_Lab2)

set(CMAKE_CXX_STANDARD 23)

add_executable(task1 task1.cpp)
add_executable(task2 task2.cpp)
add_executable(task3.1 task3.1.cpp)
add_executable(task3.2 task3.2.cpp)
add_executable(task4 task4.cpp)
add_executable(task5 task5.cpp)
add_executable(task6 task6.cpp)
add_executable(task7 task7.cpp)
add_executable(task8 task8.cpp)
add_executable(task9 task9.cpp)
add_executable(task10 task10.cpp)
add_executable(task11 task11.cpp)
add_executable(task12 task12.cpp)
add_executable(task13 task13.cpp)
add_executable(task14 task14.cpp)
add_executable(task15 task15.cpp)
add_executable(task16 task16.cpp)
add_executable(task17 task17.cpp)
add_executable(test test.cpp)